# BondScribe

./: .env.example  .gitignore  LICENSE  README.md  RunBondScribe.bat  TROUBLESHOOTING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: audio.py  server.py  stt.py  transcript.py
desktop/: chat-preload.js  main.js  package.json  preload.js  renderer.html  renderer.js  webview-preload.js
frontend/: index.html
tools/: bootstrap.ps1  make_icon.py
